--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,245 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+  -webkit-tap-highlight-color:  transparent;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  background-color: #DEDEDE;
+}
+
+.wrapper{
+  padding: 15px 5px;
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+
+.main-block{
+  width: 100%;
+}
+
+.main-song-block {
+  width: 100%;
+  border-radius: 10px;
+  padding: 10px 30px;
+  background: rgb(252,86,80);
+  background: linear-gradient(90deg, rgba(252,86,80,1) 0%, rgba(143,81,252,1) 100%);
+}
+
+.name-time {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  gap: 10px;
+  align-items: center;
+}
+
+.name {
+  font-weight: bold;
+}
+
+.time {
+  font-size: 13px;
+  font-weight: bold;
+  color: #B9B6B6;
+}
+
+.controll-main {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  gap: 15px;
+  padding-top: 15px;
+}
+
+.restart-img{
+  height: 20px;
+  width: auto;
+}
+
+.next-img{
+  height: 20px;
+  width: auto;
+}
+
+/* slider */
+.slider {
+  width: 100%;
+}
+
+
+#range2 {
+  -webkit-appearance: none;
+  appearance: none; 
+  width: 100%;
+  cursor: pointer;
+  outline: none;
+  border-radius: 15px;
+  height: 6px;
+  background: black;
+}
+
+#range2::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none; 
+  height: 15px;
+  width: 10px;
+  background-color: #B9B6B6;
+  border-radius: 5px;
+  border: none;
+  transition: .2s ease-in-out;
+}
+
+
+
+/* volume */
+
+.volume-text{
+  padding-top: 20px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.change-vol-block{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  gap: 25px;
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.change-vol-block>img{
+  height: 20px;
+  width: auto;
+  margin-top: 2px;
+  cursor: pointer;
+}
+
+/* song list */
+
+.songlist-block{
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 20px;
+  max-height: 200px;
+  overflow: auto;
+  padding: 2px;
+}
+
+.song{
+  width: 100%;
+  margin-top: 10px;
+  border-radius: 8px;
+  padding: 10px;
+  background-color: #FF5757;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  align-items: center;
+}
+
+.song-name{
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.buttons{
+  display: flex;
+  gap: 7px;
+  align-items: center;
+}
+
+.up{
+  transform: rotate(90deg);
+  height: 20px;
+  width: auto;
+  cursor: pointer;
+}
+
+.down{
+  transform: rotate(-90deg);
+  height: 20px;
+  width: auto;
+  cursor: pointer;
+}
+
+.remove{
+  height: 20px;
+  width: auto;
+  cursor: pointer;
+}
+
+/* scroll */
+.scrollbar::-webkit-scrollbar{
+  width: 8px;
+}
+
+.scrollbar::-webkit-scrollbar-track{
+  background-color: #B9B6B6;
+}
+
+.scrollbar::-webkit-scrollbar-thumb{
+  border: 2px solid rgb(148 163 184);
+  background-color: #DEDEDE;
+  border-radius: 5px;
+}
+
+/* find songs block */
+
+.find-songs-block{
+  width: 100%;
+  padding-top: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.find-song-title{
+  padding-top: 20px;
+  text-align: center;
+  font-size: 20px;
+  
+}
+
+.input-text{
+  margin-top: 10px;
+  width: 100%;
+  border: 2px solid black;
+  border-radius: 5px 5px 0 0;
+  padding: 2px 3px;
+}
+
+.input-text:focus{
+  outline: none;
+}
+
+.ans-block{
+  width: 100%;
+  background-color: white;
+  border-radius: 0 0 5px 5px;
+  max-height: 120px;
+  overflow: auto;
+}
+
+.found-song{
+  display: flex;
+  justify-content: space-between;
+  
+  align-items: center;
+  padding: 5px;
+}
+
+.found-song-name{
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.img-found-song{
+  width: 15px;
+  height: auto;
 }
